5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1643_2704.log
== TEST (2019-04-07 01:44:07) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:44:28) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:45:52) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:45:52) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:46:32) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:47:02) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:48:32) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:50:02) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:50:47) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:51:54) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 01:52:23) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)
-- EXECUTION TIME:
0.13845
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.1
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.1
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:54:10) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno = "S"):
	print(nota + 10 / 100)

-- ERROR:
File "XXXX", line 4
    if(aluno = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:54:11) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno = "S"):
	print(nota + 10 / 100)

-- ERROR:
File "XXXX", line 4
    if(aluno = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:55:09) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno = "S"):
	print(nota + 10 / 100)

-- ERROR:
File "XXXX", line 4
    if(aluno = "S"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:55:27) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + 10 / 100)

-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:56:20) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (10 / 100))

-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 01:57:10) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (90 / 100))

-- OUTPUT:
5.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:00:09) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (10 // 100))

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:00:42) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (10 / 100))

-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:01:00) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (10 / 1000))

-- OUTPUT:
5.01
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:04:17) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:04:56) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 02:05:15) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))

-- EXECUTION TIME:
0.135465
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:05:19) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 02:05:36) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))

-- EXECUTION TIME:
0.220743
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:06:15) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))
else:
	print(nota)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:06:36) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))
else:
	print(nota)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 02:07:02) 
-- CODE:
nota = float(input("nota do aluno: "))
aluno = input("S ou N: ")

if(aluno == "S"):
	print(nota + (nota * 10 / 100))
else:
	print(nota)

-- EXECUTION TIME:
0.145279
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
